--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,23 +18,19 @@ jobs:
       - name: Definir Pasta
         id: definir_pasta
         run: |
-          # Definir o diretório a ser compactado
           pasta_compactada="translated/CUSTOM"
           echo "::set-output name=pasta::$pasta_compactada"
 
       - name: Verificar Diretório
         run: |
-          # Obter o caminho do diretório
           pasta_compactada=${{ steps.definir_pasta.outputs.pasta }}
           echo "Verificando diretório: $pasta_compactada"
 
-          # Verificar se o diretório existe
           if [ ! -d "$pasta_compactada" ]; then
             echo "Diretório não existe: $pasta_compactada"
             exit 1
           fi
 
-          # Verificar se o diretório não está vazio
           if [ -z "$(ls -A $pasta_compactada)" ]; then
             echo "Diretório está vazio: $pasta_compactada"
             exit 1
@@ -42,11 +38,8 @@ jobs:
 
       - name: Gerar Arquivo Compactado
         run: |
-          # Obter o caminho do diretório
           pasta_compactada=${{ steps.definir_pasta.outputs.pasta }}
           echo "Compactando diretório: $pasta_compactada"
-          
-          # Criar o arquivo ZIP
           zip -r release.zip $pasta_compactada
 
       - name: Upload para Releases
@@ -57,9 +50,11 @@ jobs:
 
       - name: Criar Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.event.release.tag_name }}
-          name: ${{ github.event.release.name }}
+          release_name: ${{ github.event.release.name }}
           body: ${{ github.event.release.body }}
           draft: false
-          assets: 'release.zip'
+          prerelease: false
