--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }} }}
+          tag_name: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
           release_name: ${{ github.event.release.name }}
           body: ${{ github.event.release.body }}
           draft: false
