--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,8 +52,9 @@ jobs:
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG_NAME: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
         with:
-          tag_name: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
+          tag_name: ${{ env.TAG_NAME }}
           release_name: ${{ github.event.release.name }}
           body: ${{ github.event.release.body }}
           draft: false
