--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,11 +19,11 @@ jobs:
         id: definir_pasta
         run: |
           pasta_compactada="translated/CUSTOM"
-          echo "::set-output name=pasta::$pasta_compactada"
+          echo "pasta=$pasta_compactada" >> $GITHUB_ENV
 
       - name: Verificar Diretório
         run: |
-          pasta_compactada=${{ steps.definir_pasta.outputs.pasta }}
+          pasta_compactada=${{ env.pasta }}
           echo "Verificando diretório: $pasta_compactada"
 
           if [ ! -d "$pasta_compactada" ]; then
@@ -38,12 +38,12 @@ jobs:
 
       - name: Gerar Arquivo Compactado
         run: |
-          pasta_compactada=${{ steps.definir_pasta.outputs.pasta }}
+          pasta_compactada=${{ env.pasta }}
           echo "Compactando diretório: $pasta_compactada"
           zip -r release.zip $pasta_compactada
 
       - name: Upload para Releases
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: release
           path: release.zip
@@ -52,10 +52,9 @@ jobs:
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG_NAME: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
         with:
-          tag_name: ${{ env.TAG_NAME }}
-          release_name: ${{ github.event.release.name }}
-          body: ${{ github.event.release.body }}
+          tag_name: "v1.0.0"  # Substitua pelo valor desejado
+          release_name: "Release v1.0.0"  # Substitua pelo valor desejado
+          body: "Descrição da release"  # Substitua pelo valor desejado
           draft: false
           prerelease: false
