--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           pasta_compactada=${{ env.pasta }}
           echo "Compactando diretório: $pasta_compactada"
-          zip -r "monster-college-translate${{NOW}}.zip" $pasta_compactada
+          zip -r "monster-college-translate${{ env.NOW }}.zip" $pasta_compactada
 
       - name: Upload para Releases
         uses: actions/upload-artifact@v4
