--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,4 +52,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: release
-          path: release.zip     
+          path: "monster-college-translate${{ env.NOW }}.zip"  
